// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review Recovery Phrase Component should match snapshot 1`] = `
<div>
  <div
    class="recovery-phrase"
    data-testid="recovery-phrase"
  >
    <div
      class="mm-box mm-container mm-container--max-width-lg mm-box--margin-right-auto mm-box--margin-left-auto"
    >
      <div
        class="box box--flex-direction-row"
      >
        <ul
          class="progressbar"
        >
          <li
            class="active complete"
          >
            Create password
          </li>
          <li
            class="active"
          >
            Secure wallet
          </li>
          <li
            class=""
          >
            Confirm secret recovery phrase
          </li>
        </ul>
      </div>
      <h2
        class="mm-box mm-text mm-text--heading-lg mm-text--font-weight-bold mm-text--text-align-center mm-box--margin-top-4 mm-box--margin-bottom-4 mm-box--color-text-default"
      >
        Write down your Secret Recovery Phrase
      </h2>
      <p
        class="mm-box mm-text mm-text--body-lg-medium mm-text--text-align-center mm-box--margin-bottom-4 mm-box--color-text-default"
      >
        Write down this 12-word Secret Recovery Phrase and save it in a place that you trust and only you can access.
      </p>
      <div
        class="mm-box recovery-phrase__tips mm-box--margin-right-auto mm-box--margin-bottom-4 mm-box--margin-left-auto"
      >
        <p
          class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-bold mm-box--margin-bottom-2 mm-box--color-text-default"
        >
          Tips
          :
        </p>
        <ul
          class="mm-box mm-box--margin-left-4 mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-column"
        >
          <li
            class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-normal mm-box--color-text-default"
          >
            Save in a password manager
          </li>
          <li
            class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-normal mm-box--color-text-default"
          >
            Store in a safe deposit box
          </li>
          <li
            class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-normal mm-box--color-text-default"
          >
            Write down and store in multiple secret places
          </li>
        </ul>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-lg mm-box--margin-right-auto mm-box--margin-left-auto"
    >
      <div
        class="mm-box recovery-phrase-chips mm-box--margin-bottom-4 mm-box--padding-4 mm-box--display-grid mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
      >
        <div
          class="mm-box recovery-phrase-chips__chips recovery-phrase-chips__chips--hidden mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
          data-testid="recovery-phrase-chips"
        >
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              1.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-0"
            >
              debris
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              2.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-1"
            >
              dizzy
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              3.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-2"
            >
              just
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              4.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-3"
            >
              program
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              5.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-4"
            >
              just
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              6.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-5"
            >
              float
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              7.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-6"
            >
              decrease
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              8.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-7"
            >
              vacant
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              9.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-8"
            >
              alarm
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              10.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-9"
            >
              reduce
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              11.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-10"
            >
              speak
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              12.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-11"
            >
              stadium
            </p>
          </div>
        </div>
        <div
          class="mm-box recovery-phrase-chips__secret-blocker mm-box--padding-4 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full mm-box--color-overlay-inverse mm-box--background-color-overlay-alternative"
        >
          <span
            class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/eye.svg');"
          />
          <p
            class="mm-box mm-text mm-text--body-lg-medium mm-box--color-overlay-inverse"
          >
            Make sure nobody is looking
          </p>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-lg mm-box--margin-right-auto mm-box--margin-left-auto mm-box--display-flex"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-pill"
        data-testid="recovery-phrase-reveal"
      >
        Reveal Secret Recovery Phrase
      </button>
    </div>
  </div>
</div>
`;

exports[`Review Recovery Phrase Component should match snapshot after reveal recovery button is clicked 1`] = `
<div>
  <div
    class="recovery-phrase"
    data-testid="recovery-phrase"
  >
    <div
      class="mm-box mm-container mm-container--max-width-lg mm-box--margin-right-auto mm-box--margin-left-auto"
    >
      <div
        class="box box--flex-direction-row"
      >
        <ul
          class="progressbar"
        >
          <li
            class="active complete"
          >
            Create password
          </li>
          <li
            class="active"
          >
            Secure wallet
          </li>
          <li
            class=""
          >
            Confirm secret recovery phrase
          </li>
        </ul>
      </div>
      <h2
        class="mm-box mm-text mm-text--heading-lg mm-text--font-weight-bold mm-text--text-align-center mm-box--margin-top-4 mm-box--margin-bottom-4 mm-box--color-text-default"
      >
        Write down your Secret Recovery Phrase
      </h2>
      <p
        class="mm-box mm-text mm-text--body-lg-medium mm-text--text-align-center mm-box--margin-bottom-4 mm-box--color-text-default"
      >
        Write down this 12-word Secret Recovery Phrase and save it in a place that you trust and only you can access.
      </p>
      <div
        class="mm-box recovery-phrase__tips mm-box--margin-right-auto mm-box--margin-bottom-4 mm-box--margin-left-auto"
      >
        <p
          class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-bold mm-box--margin-bottom-2 mm-box--color-text-default"
        >
          Tips
          :
        </p>
        <ul
          class="mm-box mm-box--margin-left-4 mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-column"
        >
          <li
            class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-normal mm-box--color-text-default"
          >
            Save in a password manager
          </li>
          <li
            class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-normal mm-box--color-text-default"
          >
            Store in a safe deposit box
          </li>
          <li
            class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-normal mm-box--color-text-default"
          >
            Write down and store in multiple secret places
          </li>
        </ul>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-lg mm-box--margin-right-auto mm-box--margin-left-auto"
    >
      <div
        class="mm-box recovery-phrase-chips mm-box--margin-bottom-4 mm-box--padding-4 mm-box--display-grid mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
      >
        <div
          class="mm-box recovery-phrase-chips__chips mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
          data-testid="recovery-phrase-chips"
        >
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              1.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-0"
            >
              debris
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              2.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-1"
            >
              dizzy
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              3.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-2"
            >
              just
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              4.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-3"
            >
              program
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              5.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-4"
            >
              just
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              6.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-5"
            >
              float
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              7.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-6"
            >
              decrease
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              8.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-7"
            >
              vacant
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              9.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-8"
            >
              alarm
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              10.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-9"
            >
              reduce
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              11.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-10"
            >
              speak
            </p>
          </div>
          <div
            class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--width-full"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              12.
            </p>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
              data-testid="recovery-phrase-chip-11"
            >
              stadium
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-lg mm-box--margin-right-auto mm-box--margin-left-auto mm-box--display-flex"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/eye-slash.svg');"
            />
            Hide seed phrase
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/copy.svg');"
            />
            Copy to clipboard
          </button>
        </div>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-pill"
          data-testid="recovery-phrase-next"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;
